[gd_scene load_steps=7 format=3 uid="uid://dyyclqnanqmah"]

[ext_resource type="Script" path="res://Actors/DimensionalWindow.gd" id="1_4n7ny"]
[ext_resource type="TileSet" uid="uid://c0cg70lv5ie4o" path="res://Graphics/Tiles/TileSet.tres" id="2_cruy2"]
[ext_resource type="Texture2D" uid="uid://m8yjy4fvsdu4" path="res://Graphics/Backgrounds/teehee temp background.png" id="2_g0bpi"]
[ext_resource type="Texture2D" uid="uid://dhmhsufwrdfie" path="res://Graphics/Backgrounds/New Background.png" id="2_r438f"]
[ext_resource type="Texture2D" uid="uid://cha1xv3j8gwqb" path="res://Graphics/Backgrounds/Old_Background_2.png" id="3_pdm17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yba56"]

[node name="DimensionalWindow" type="Control" node_paths=PackedStringArray("tilemap", "outline")]
custom_minimum_size = Vector2(16, 16)
layout_direction = 1
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 128.0
script = ExtResource("1_4n7ny")
tilemap = NodePath("Clip/Moving/TileMap")
outline = NodePath("Outline")
background_sprites = Array[Texture2D]([ExtResource("2_r438f"), ExtResource("3_pdm17")])
shadow_colour_new = Color(0, 0, 0.1, 0.4)
shadow_colour_old = Color(0, 0.1, 0, 0.4)

[node name="Area" type="Area2D" parent="."]
position = Vector2(16, 16)
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_yba56")

[node name="Clip" type="ColorRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.380392, 0.380392, 0.380392, 1)

[node name="Background" type="Sprite2D" parent="Clip"]
scale = Vector2(4, 4)
texture = ExtResource("2_g0bpi")
centered = false

[node name="Moving" type="Node2D" parent="Clip"]
scale = Vector2(4, 4)

[node name="TileMap" type="TileMap" parent="Clip/Moving"]
clip_children = 2
scale = Vector2(0.25, 0.25)
tile_set = ExtResource("2_cruy2")
format = 2

[node name="Outline" type="Line2D" parent="."]
z_index = 1
width = 1.0
default_color = Color(0.831373, 0.8, 0.364706, 1)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="update_editor_qualities"]
